feat: add sales docs
